<!--
  Copyright 2016 Florian Amrhein. All rights reserved.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<resources>
    <string name="app_name">MeinGaarden</string>
    <string name="title_activity_mein_gaarden">MeinGaarden</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- XYZTOURISTATTRACTIONS -->
    <string name="empty_list">No attractions found nearby!</string>
    <!-- alt <string name="nearby_attraction">Nearby tourist attraction</string> -->
    <string name="nearby_attraction">Attraktion in der Nähe.</string>
    <string name="action_test_notification">Test Notification</string>
    <string name="action_test_notification_dialog">
<![CDATA[
This will trigger a rich notification that is bridged over to the Wear device.
\n\nNote that the first time this runs it can take 20-30 seconds to transfer
the image data (in practice, users wouldn\'t notice this as the notification
would be triggered automatically and only show up after the data was
transferred).
]]>
    </string>
    <string name="action_test_microapp">Test Micro App</string>
    <string name="action_test_microapp_dialog">
<![CDATA[
This will trigger a notification on Wear that lets you open up the full
wearable app. A few things to note:\n\n
• Ensure you have the wearable APK installed on your Wear device (debug builds
require you to install it manually)\n\n
• The first time this runs it can take 20-30 seconds to transfer the image
data (in practice, users wouldn\'t notice this as the notification would only
be triggered after the data was transferred)\n\n
• The notification priority is set to the recommended default value so it may
appear further down your stream
]]>
    </string>
    <string name="action_test_toggle_geofence">Toggle Geofence Trigger</string>
    <string name="action_map">Show on Map</string>
    <string name="permission_explanation">Allow this app to use your location to show distance to attractions?</string>
    <string name="permission_explanation_action">Let\'s do it!</string>
    <string name="action_xyztourist">XYZTourist</string>
    <string name="action_hotspots">HotSpots</string>

    <!-- BasicSyncAdapter -->
    <string name="account_name">FeedSync Service</string>
    <string name="title_entry_detail">Entry Detail</string>
    <string name="loading">Waiting for sync…</string>
    <string name="description_refresh">Refresh</string>
    <string name="action_attractions">Attraktionen</string>
    <string name="action_appnews">AppNews</string>
    <string name="action_appnews2">AppNews2</string>
    <string name="action_settings_dialog">Hier kannst Du bald die Einstellungen der AppNews ändern</string>
    <string name="gaarden_text">"Hier erhältst Du in Zukunft mehr Informationen rund um Gaarden.\n"
        "Wenn Du mitmachen möchtest, nimm Kontakt zum Entwickler auf.\n"
        "Ich freue mich auf eine Zusammenarbeit …\n\n"
        "Gesucht werden Supporter, Redakteure, Programmierer, Administratoren, Reporter usw.\n\n"
        "Weitere Ideen in Planung:\n - Geschichte Gaardens \n - Bildergalerie\n - Mail To Developer\n - App-Widget\n - Rallys\n - Stadtteiltouren\n"</string>
    <string name="nav_title">MeinGaarden</string>
    <string name="nav_mail">schmetterfly.butterling@gmail.com</string>
    <string name="nav_attractions">Attraktionen</string>
    <string name="nav_hotspots">HotSpots</string>
    <string name="nav_appnews">AppNews</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_send">Send</string>
    <string name="nav_share">Share</string>
    <string name="nav_title_communicate">Communicate</string>
    <string name="cancel">Cancel</string>
    <string name="fire">Fire</string>
    <string name="dialog_fire_missiles">Do You really want to Fire Missles?</string>
    <string name="fab">Hier kommt bald Mail an Entwickler.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">AttractionNotification</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_new_hotspotmessage_notifications">HotSpotNotification</string>



    <string name="nearby_hotspot">HotSpot in der Nähe.</string>
    <string name="appwidget_text_description">AppWidget für MeinGaarden</string>
    <string name="appwidget_text">MeinGaardenAppWidget</string>
    <string name="configure">Angezeigter Text</string>
    <string name="add_widget">Add Widget Hinzufügen</string>
    <string name="action_gallery">Gallery</string>
    <string name="pref_title_trigger_radius">Benachrichtigungs-Umkreis</string>
    <string name="pref_summary_trigger_radius">Umkreis für  Benachrichtigungen</string>
    <string name="action_locationtest">locationtest</string>
    <string name="title_activity_mein_gaarden1">Locations</string>
    <string name="new_account_name">MeinKonto</string>
    <string name="title_fmt">test</string>
    <string name="key1_action">test</string>
    <string name="key1_summary">test</string>
    <string name="title_activity_emailclient">MailToDeveloper</string>

</resources>
