<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_attractions"
        android:orderInCategory="10"
        android:title="@string/action_attractions"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_hotspots"
        android:orderInCategory="20"
        android:title="@string/action_hotspots"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_appnews"
        android:orderInCategory="50"
        android:title="@string/action_appnews"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_gallery"
        android:orderInCategory="50"
        android:title="@string/action_gallery"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_locationtest"
        android:orderInCategory="50"
        android:title="@string/action_locationtest"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <!-- alt
    <item
        android:id="@+id/action_appnews2"
        android:orderInCategory="50"
        android:title="@string/action_appnews2"
        app:showAsAction="never" />
        -->
</menu>
