<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2016 Florian Amrhein. All rights reserved.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_attractions"
            android:icon="@drawable/ic_action_place"
            android:title="@string/nav_attractions" />
        <item
            android:id="@+id/nav_hotspots"
            android:icon="@drawable/ic_action_network_wifi"
            android:title="@string/nav_hotspots" />
        <item
            android:id="@+id/nav_appnews"
            android:icon="@drawable/ic_action_important"
            android:title="@string/nav_appnews" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_gallery" />
    </group>

    <item android:title="@string/nav_title_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_send" />
        </menu>
    </item>

</menu>
