<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_new_message"
        android:title="@string/pref_title_new_message_notifications" />


    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_new_hotspotmessage"
        android:title="@string/pref_title_new_hotspotmessage_notifications" />

    <!-- TRIGGER-RADIUS -->
    <ListPreference
        android:key="pref_key_trigger_radius"
        android:summary="@string/pref_summary_trigger_radius"
        android:title="@string/pref_title_trigger_radius"
        android:dialogTitle="@string/pref_title_trigger_radius"
        android:entries="@array/pref_triggerRadius_names"
        android:entryValues="@array/pref_triggerRadius_values"
        android:defaultValue="2000"/>

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_vibrate"
        android:title="@string/pref_title_vibrate" />

</PreferenceScreen>
